# QSerializer

./: CMakeLists.txt  README.md
src/: qserializer.h
